--- a/src/html/cmd/index.html
+++ b/src/html/cmd/index.html
@@ -49,7 +49,7 @@ Noise Explorer v0.2
 	--help: View this help text.
 </pre>
 			<h2>License</h2>
-			<p>All Noise Explorer software, including this website, is licensed under the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU General Public License, Version 3.</a></p>
+			<p>All Noise Explorer software, including this website, is licensed under the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU General Public License, Version 3</a>.</p>
 			<h2>Download Noise Explorer for your Computer</h2>
 			<p>The Noise Explorer command-line tool has the following requirements:</p>
 			<ul>
