Add meta description tags for webpages.

--- a/src/html/patterns/template.html
+++ b/src/html/patterns/template.html
@@ -4,6 +4,9 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Noise Explorer: $NOISERENDER_T$</title>
+	<meta name="keywords" content="noise protocol, protocol verification, formal verification, noise protocol framework, symbolic verification" />
+	<meta name="description" content="Noise Explorer is an online engine for reasoning about Noise Protocol Framework Handshake Patterns. Noise Explorer allows you to design and validate Noise Handshake Patterns, to generate cryptographic models for formal verification and to explore a compendium of formal verification results for the most popular and relevant Noise Handshake Patterns in use today." />
+	<link rel="image_src" href="https://noiseexplorer.com/res/img/logo.png" />
 	<link rel="icon" type="image/png" href="../res/img/logo.png" />
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans" rel="stylesheet" />
 	<link href="../res/css/style.css" rel="stylesheet" />
