Remove RecvEnd query (no longer needed or useful.)

--- a/src/html/patterns/index.html
+++ b/src/html/patterns/index.html
@@ -47,6 +47,15 @@ IX:
   -&gt; e, s
   &lt;- e, ee, se, s, es
 </a>
+<a href="K.noise.html" class="patternEntry">
+K:
+  -&gt; s
+  &lt;- s
+  ...
+  -&gt; e, es, ss
+  &lt;-
+  -&gt;
+</a>
 <a href="KK.noise.html" class="patternEntry">
 KK:
   -&gt; s
@@ -182,7 +191,6 @@ K1K:
   &lt;- e, ee
   -&gt; se
 </a>
-<!--
 <a href="KK1.noise.html" class="patternEntry">
 KK1:
   -&gt; s
@@ -191,7 +199,6 @@ KK1:
   -&gt; e
   &lt;- e, ee, se, es
 </a>
--->
 <a href="K1K1.noise.html" class="patternEntry">
 K1K1:
   -&gt; s
@@ -239,7 +246,6 @@ I1K:
   &lt;- e, ee
   -&gt; se
 </a>
-<!--
 <a href="IK1.noise.html" class="patternEntry">
 IK1:
   &lt;- s
@@ -247,7 +253,6 @@ IK1:
   -&gt; e, s
   &lt;- e, ee, se, es
 </a>
--->
 <a href="I1K1.noise.html" class="patternEntry">
 I1K1:
   &lt;- s
