--- a/src/html/patterns/template.html
+++ b/src/html/patterns/template.html
@@ -26,16 +26,16 @@
 			<a href="../cmd">Command-Line Tool</a>
 		</div>
 	</div>
-	<div class="results">
+	<div class="results" style="height: $NOISERENDER_H$px;">
 		<div class="arrowsFrame">
 			<h1 id="patternName">$NOISERENDER_T$</h1>
-			<div class="arrows">
-				<svg id="patternArrows">
+			<div class="arrows" style="height: $NOISERENDER_H$px;">
+				<svg id="patternArrows" style="height: $NOISERENDER_H$px;">
 					$NOISERENDER_R$
 				</svg>
 			</div>
 		</div>
-		<div class="resultsExplanation">
+		<div class="resultsExplanation" style="height: $NOISERENDER_H$px;">
 			<h2>Noise Pattern Analysis</h2>
 			$NOISERENDER_A$
 		</div>
