--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,14 +29,14 @@
 			<a href="cmd">Command-Line Tool</a>
 		</div>
 	</div>
-	<div class="results">
+	<div class="results" style="height: 770px;">
 		<div class="arrowsFrame">
 			<h1 id="patternName"></h1>
-			<div class="arrows">
-				<svg id="patternArrows" class="noColor"></svg>
+			<div class="arrows" style="height: 770px;">
+				<svg id="patternArrows" class="noColor" style="height: 770px;"></svg>
 			</div>
 		</div>
-		<div class="resultsExplanation">
+		<div class="resultsExplanation" style="height: 770px;">
 			<h2>Design and Explore Noise Handshake Patterns</h2>
 			<p>
 				Noise Explorer is an online engine for reasoning about <a href="http://noiseprotocol.org/" target="_blank">Noise Protocol Framework</a> (revision 34) Handshake Patterns. Noise Explorer allows you to:
