Remove debug code.

--- a/src/html/patterns/IK.noise.html
+++ b/src/html/patterns/IK.noise.html
@@ -26,35 +26,35 @@
 			<a href="../cmd">Command-Line Tool</a>
 		</div>
 	</div>
-	<div class="results">
+	<div class="results" style="height:840px">
 		<div class="arrowsFrame">
 			<h1 id="patternName">IK</h1>
-			<div class="arrows">
-				<svg id="patternArrows">
+			<div class="arrows" style="height:840px">
+				<svg id="patternArrows" style="height:840px">
 					<line x2="248" y1="30" y2="30"></line>
 					<polyline  points="10 20 1 30 10 40"></polyline>
 					<text class="tokens" x="120" y="22">s</text>
-				<text class="ellipsis" x="120" y="158">...</text><line data-seclevel="2" x1="1" x2="248" y1="286" y2="286"></line>
-					<polyline data-seclevel="2" points="237 276 248 286 237 296"></polyline>
-					<circle data-seclevel="1" cx="17" cy="286" r="15"></circle>
-					<text class="msg" x="16" y="291">a</text>
-					<text class="tokens" x="120" y="278">e, es, s, ss</text><line data-seclevel="4" x2="248" y1="414" y2="414"></line>
-					<polyline data-seclevel="4" points="10 404 1 414 10 424"></polyline>
-					<circle data-seclevel="4" cx="234" cy="414" r="15"></circle>
-					<text class="msg" x="233" y="419">b</text>
-					<text class="tokens" x="120" y="406">e, ee, se</text><line data-seclevel="5" x1="1" x2="248" y1="542" y2="542"></line>
-					<polyline data-seclevel="5" points="237 532 248 542 237 552"></polyline>
-					<circle data-seclevel="4" cx="17" cy="542" r="15"></circle>
-					<text class="msg" x="16" y="547">c</text>
-					<text class="tokens" x="120" y="534"></text><line data-seclevel="5" x2="248" y1="670" y2="670"></line>
-					<polyline data-seclevel="5" points="10 660 1 670 10 680"></polyline>
-					<circle data-seclevel="4" cx="234" cy="670" r="15"></circle>
-					<text class="msg" x="233" y="675">d</text>
-					<text class="tokens" x="120" y="662"></text>
+				<text class="ellipsis" x="120" y="165">...</text><line data-seclevel="2" x1="1" x2="248" y1="300" y2="300"></line>
+					<polyline data-seclevel="2" points="237 290 248 300 237 310"></polyline>
+					<circle data-seclevel="1" cx="17" cy="300" r="15"></circle>
+					<text class="msg" x="16" y="305">a</text>
+					<text class="tokens" x="120" y="292">e, es, s, ss</text><line data-seclevel="4" x2="248" y1="435" y2="435"></line>
+					<polyline data-seclevel="4" points="10 425 1 435 10 445"></polyline>
+					<circle data-seclevel="4" cx="234" cy="435" r="15"></circle>
+					<text class="msg" x="233" y="440">b</text>
+					<text class="tokens" x="120" y="427">e, ee, se</text><line data-seclevel="5" x1="1" x2="248" y1="570" y2="570"></line>
+					<polyline data-seclevel="5" points="237 560 248 570 237 580"></polyline>
+					<circle data-seclevel="4" cx="17" cy="570" r="15"></circle>
+					<text class="msg" x="16" y="575">c</text>
+					<text class="tokens" x="120" y="562"></text><line data-seclevel="5" x2="248" y1="705" y2="705"></line>
+					<polyline data-seclevel="5" points="10 695 1 705 10 715"></polyline>
+					<circle data-seclevel="4" cx="234" cy="705" r="15"></circle>
+					<text class="msg" x="233" y="710">d</text>
+					<text class="tokens" x="120" y="697"></text>
 				</svg>
 			</div>
 		</div>
-		<div class="resultsExplanation">
+		<div class="resultsExplanation" style="height:840px">
 			<h2>Noise Pattern Analysis</h2>
 			<p>The responder is initialized with a pre-shared long-term static key, which is assumed to be pre-authenticated out of band by the initiator.</p> 
 			
