--- a/src/html/patterns/IN.noise.html
+++ b/src/html/patterns/IN.noise.html
@@ -26,32 +26,32 @@
 			<a href="../cmd">Command-Line Tool</a>
 		</div>
 	</div>
-	<div class="results">
+	<div class="results" style="height:570px">
 		<div class="arrowsFrame">
 			<h1 id="patternName">IN</h1>
-			<div class="arrows">
-				<svg id="patternArrows">
+			<div class="arrows" style="height:570px">
+				<svg id="patternArrows" style="height:570px">
 					<line data-seclevel="0" x1="1" x2="248" y1="30" y2="30"></line>
 					<polyline data-seclevel="0" points="237 20 248 30 237 40"></polyline>
 					<circle data-seclevel="0" cx="17" cy="30" r="15"></circle>
 					<text class="msg" x="16" y="35">a</text>
-					<text class="tokens" x="120" y="22">e, s</text><line data-seclevel="3" x2="248" y1="158" y2="158"></line>
-					<polyline data-seclevel="3" points="10 148 1 158 10 168"></polyline>
-					<circle data-seclevel="0" cx="234" cy="158" r="15"></circle>
-					<text class="msg" x="233" y="163">b</text>
-					<text class="tokens" x="120" y="150">e, ee, se</text><line data-seclevel="1" x1="1" x2="248" y1="286" y2="286"></line>
-					<polyline data-seclevel="1" points="237 276 248 286 237 296"></polyline>
-					<circle data-seclevel="2" cx="17" cy="286" r="15"></circle>
-					<text class="msg" x="16" y="291">c</text>
-					<text class="tokens" x="120" y="278"></text><line data-seclevel="5" x2="248" y1="414" y2="414"></line>
-					<polyline data-seclevel="5" points="10 404 1 414 10 424"></polyline>
-					<circle data-seclevel="0" cx="234" cy="414" r="15"></circle>
-					<text class="msg" x="233" y="419">d</text>
-					<text class="tokens" x="120" y="406"></text>
+					<text class="tokens" x="120" y="22">e, s</text><line data-seclevel="3" x2="248" y1="165" y2="165"></line>
+					<polyline data-seclevel="3" points="10 155 1 165 10 175"></polyline>
+					<circle data-seclevel="0" cx="234" cy="165" r="15"></circle>
+					<text class="msg" x="233" y="170">b</text>
+					<text class="tokens" x="120" y="157">e, ee, se</text><line data-seclevel="1" x1="1" x2="248" y1="300" y2="300"></line>
+					<polyline data-seclevel="1" points="237 290 248 300 237 310"></polyline>
+					<circle data-seclevel="2" cx="17" cy="300" r="15"></circle>
+					<text class="msg" x="16" y="305">c</text>
+					<text class="tokens" x="120" y="292"></text><line data-seclevel="5" x2="248" y1="435" y2="435"></line>
+					<polyline data-seclevel="5" points="10 425 1 435 10 445"></polyline>
+					<circle data-seclevel="0" cx="234" cy="435" r="15"></circle>
+					<text class="msg" x="233" y="440">d</text>
+					<text class="tokens" x="120" y="427"></text>
 				</svg>
 			</div>
 		</div>
-		<div class="resultsExplanation">
+		<div class="resultsExplanation" style="height:570px">
 			<h2>Noise Pattern Analysis</h2>
 			
 			<h3>Message A</h3>
