--- a/src/html/patterns/KK.noise.html
+++ b/src/html/patterns/KK.noise.html
@@ -26,37 +26,37 @@
 			<a href="../cmd">Command-Line Tool</a>
 		</div>
 	</div>
-	<div class="results">
+	<div class="results" style="height:975px">
 		<div class="arrowsFrame">
 			<h1 id="patternName">KK</h1>
-			<div class="arrows">
-				<svg id="patternArrows">
+			<div class="arrows" style="height:975px">
+				<svg id="patternArrows" style="height:975px">
 					<line x1="1" x2="248" y1="30" y2="30"></line>
 					<polyline points="237 20 248 30 237 40"></polyline>
-					<text class="tokens" x="120" y="22">s</text><line x2="248" y1="158" y2="158"></line>
-					<polyline  points="10 148 1 158 10 168"></polyline>
-					<text class="tokens" x="120" y="150">s</text>
-				<text class="ellipsis" x="120" y="286">...</text><line data-seclevel="2" x1="1" x2="248" y1="414" y2="414"></line>
-					<polyline data-seclevel="2" points="237 404 248 414 237 424"></polyline>
-					<circle data-seclevel="1" cx="17" cy="414" r="15"></circle>
-					<text class="msg" x="16" y="419">a</text>
-					<text class="tokens" x="120" y="406">e, es, ss</text><line data-seclevel="4" x2="248" y1="542" y2="542"></line>
-					<polyline data-seclevel="4" points="10 532 1 542 10 552"></polyline>
-					<circle data-seclevel="4" cx="234" cy="542" r="15"></circle>
-					<text class="msg" x="233" y="547">b</text>
-					<text class="tokens" x="120" y="534">e, ee, se</text><line data-seclevel="5" x1="1" x2="248" y1="670" y2="670"></line>
-					<polyline data-seclevel="5" points="237 660 248 670 237 680"></polyline>
-					<circle data-seclevel="4" cx="17" cy="670" r="15"></circle>
-					<text class="msg" x="16" y="675">c</text>
-					<text class="tokens" x="120" y="662"></text><line data-seclevel="5" x2="248" y1="798" y2="798"></line>
-					<polyline data-seclevel="5" points="10 788 1 798 10 808"></polyline>
-					<circle data-seclevel="4" cx="234" cy="798" r="15"></circle>
-					<text class="msg" x="233" y="803">d</text>
-					<text class="tokens" x="120" y="790"></text>
+					<text class="tokens" x="120" y="22">s</text><line x2="248" y1="165" y2="165"></line>
+					<polyline  points="10 155 1 165 10 175"></polyline>
+					<text class="tokens" x="120" y="157">s</text>
+				<text class="ellipsis" x="120" y="300">...</text><line data-seclevel="2" x1="1" x2="248" y1="435" y2="435"></line>
+					<polyline data-seclevel="2" points="237 425 248 435 237 445"></polyline>
+					<circle data-seclevel="1" cx="17" cy="435" r="15"></circle>
+					<text class="msg" x="16" y="440">a</text>
+					<text class="tokens" x="120" y="427">e, es, ss</text><line data-seclevel="4" x2="248" y1="570" y2="570"></line>
+					<polyline data-seclevel="4" points="10 560 1 570 10 580"></polyline>
+					<circle data-seclevel="4" cx="234" cy="570" r="15"></circle>
+					<text class="msg" x="233" y="575">b</text>
+					<text class="tokens" x="120" y="562">e, ee, se</text><line data-seclevel="5" x1="1" x2="248" y1="705" y2="705"></line>
+					<polyline data-seclevel="5" points="237 695 248 705 237 715"></polyline>
+					<circle data-seclevel="4" cx="17" cy="705" r="15"></circle>
+					<text class="msg" x="16" y="710">c</text>
+					<text class="tokens" x="120" y="697"></text><line data-seclevel="5" x2="248" y1="840" y2="840"></line>
+					<polyline data-seclevel="5" points="10 830 1 840 10 850"></polyline>
+					<circle data-seclevel="4" cx="234" cy="840" r="15"></circle>
+					<text class="msg" x="233" y="845">d</text>
+					<text class="tokens" x="120" y="832"></text>
 				</svg>
 			</div>
 		</div>
-		<div class="resultsExplanation">
+		<div class="resultsExplanation" style="height:975px">
 			<h2>Noise Pattern Analysis</h2>
 			<p>The initiator is initialized with a pre-shared long-term static key, which is assumed to be pre-authenticated out of band by the responder.</p> 
 			<p>The responder is initialized with a pre-shared long-term static key, which is assumed to be pre-authenticated out of band by the initiator.</p> 
