--- a/src/html/patterns/NK1.noise.html
+++ b/src/html/patterns/NK1.noise.html
@@ -26,27 +26,35 @@
 			<a href="../cmd">Command-Line Tool</a>
 		</div>
 	</div>
-	<div class="results">
+	<div class="results" style="height:840px">
 		<div class="arrowsFrame">
 			<h1 id="patternName">NK1</h1>
-			<div class="arrows">
-				<svg id="patternArrows">
+			<div class="arrows" style="height:840px">
+				<svg id="patternArrows" style="height:840px">
 					<line x2="248" y1="30" y2="30"></line>
 					<polyline  points="10 20 1 30 10 40"></polyline>
 					<text class="tokens" x="120" y="22">s</text>
-				<text class="ellipsis" x="120" y="158">...</text><line data-seclevel="0" x1="1" x2="248" y1="286" y2="286"></line>
-					<polyline data-seclevel="0" points="237 276 248 286 237 296"></polyline>
-					<circle data-seclevel="0" cx="17" cy="286" r="15"></circle>
-					<text class="msg" x="16" y="291">a</text>
-					<text class="tokens" x="120" y="278">e</text><line data-seclevel="1" x2="248" y1="414" y2="414"></line>
-					<polyline data-seclevel="1" points="10 404 1 414 10 424"></polyline>
-					<circle data-seclevel="2" cx="234" cy="414" r="15"></circle>
-					<text class="msg" x="233" y="419">b</text>
-					<text class="tokens" x="120" y="406">e, ee, es</text>
+				<text class="ellipsis" x="120" y="165">...</text><line data-seclevel="0" x1="1" x2="248" y1="300" y2="300"></line>
+					<polyline data-seclevel="0" points="237 290 248 300 237 310"></polyline>
+					<circle data-seclevel="0" cx="17" cy="300" r="15"></circle>
+					<text class="msg" x="16" y="305">a</text>
+					<text class="tokens" x="120" y="292">e</text><line data-seclevel="1" x2="248" y1="435" y2="435"></line>
+					<polyline data-seclevel="1" points="10 425 1 435 10 445"></polyline>
+					<circle data-seclevel="2" cx="234" cy="435" r="15"></circle>
+					<text class="msg" x="233" y="440">b</text>
+					<text class="tokens" x="120" y="427">e, ee, es</text><line data-seclevel="0" x1="1" x2="248" y1="570" y2="570"></line>
+					<polyline data-seclevel="0" points="237 560 248 570 237 580"></polyline>
+					<circle data-seclevel="0" cx="17" cy="570" r="15"></circle>
+					<text class="msg" x="16" y="575">c</text>
+					<text class="tokens" x="120" y="562"></text><line data-seclevel="0" x2="248" y1="705" y2="705"></line>
+					<polyline data-seclevel="0" points="10 695 1 705 10 715"></polyline>
+					<circle data-seclevel="0" cx="234" cy="705" r="15"></circle>
+					<text class="msg" x="233" y="710">d</text>
+					<text class="tokens" x="120" y="697"></text>
 				</svg>
 			</div>
 		</div>
-		<div class="resultsExplanation">
+		<div class="resultsExplanation" style="height:840px">
 			<h2>Noise Pattern Analysis</h2>
 			<p>The responder is initialized with a pre-shared long-term static key, which is assumed to be pre-authenticated out of band by the initiator.</p> 
 			
@@ -58,7 +66,7 @@
 	</div>
 	<div class="rawResults">
 		<h2>raw results &mdash; active attacker</h2>
-result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,bob,stage_a,m,true)) is false.<br />result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,c_772,stage_a,m,true)) || event(leaks(phase0,alice)) || event(leaks(phase0,bob)) is false.<br />result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,c_772,stage_a,m,true)) || event(leaks(phase0,alice)) is false.<br />result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,bob,stage_a,m,true)) || event(leaks(phase0,alice)) || event(leaks(phase0,bob)) is false.<br />result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,bob,stage_a,m,true)) || event(leaks(phase0,alice)) is false.<br />result not attacker_p1(msg_a(alice,bob)) is false.<br />result attacker_p1(msg_a(alice,bob)) ==> event(leaks(phase0,bob)) || event(leaks(phase1,bob)) is false.<br />result attacker_p1(msg_a(alice,bob)) ==> event(leaks(phase0,bob)) || (event(leaks(phase1,bob)) && event(leaks(p,alice))) is false.<br />result attacker_p1(msg_a(alice,bob)) ==> event(leaks(phase0,bob)) is false.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,alice,stage_b,m,true)) is false.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,c_772,stage_b,m,true)) || event(leaks(phase0,bob)) || event(leaks(phase0,alice)) is true.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,c_772,stage_b,m,true)) || event(leaks(phase0,bob)) is true.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,alice,stage_b,m,true)) || event(leaks(phase0,bob)) || event(leaks(phase0,alice)) cannot be proved.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,alice,stage_b,m,true)) || event(leaks(phase0,bob)) cannot be proved.<br />result not attacker_p1(msg_b(bob,alice)) is false.<br />result attacker_p1(msg_b(bob,alice)) ==> event(leaks(phase0,alice)) || event(leaks(phase1,alice)) is false.<br />result attacker_p1(msg_b(bob,alice)) ==> event(leaks(phase0,alice)) || (event(leaks(phase1,alice)) && event(leaks(p,bob))) is false.<br />result attacker_p1(msg_b(bob,alice)) ==> event(leaks(phase0,alice)) is false.<br />result not event(recvend(true)) is false.
+result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,bob,stage_a,m,true)) is false.<br />result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,c_990,stage_a,m,true)) || event(leaks(phase0,alice)) || event(leaks(phase0,bob)) is false.<br />result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,c_990,stage_a,m,true)) || event(leaks(phase0,alice)) is false.<br />result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,bob,stage_a,m,true)) || event(leaks(phase0,alice)) || event(leaks(phase0,bob)) is false.<br />result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,bob,stage_a,m,true)) || event(leaks(phase0,alice)) is false.<br />result not attacker_p1(msg_a(alice,bob)) cannot be proved.<br />result attacker_p1(msg_a(alice,bob)) ==> event(leaks(phase0,bob)) || event(leaks(phase1,bob)) cannot be proved.<br />result attacker_p1(msg_a(alice,bob)) ==> event(leaks(phase0,bob)) || (event(leaks(phase1,bob)) && event(leaks(p,alice))) cannot be proved.<br />result attacker_p1(msg_a(alice,bob)) ==> event(leaks(phase0,bob)) cannot be proved.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,alice,stage_b,m,true)) is false.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,c_990,stage_b,m,true)) || event(leaks(phase0,bob)) || event(leaks(phase0,alice)) is true.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,c_990,stage_b,m,true)) || event(leaks(phase0,bob)) is true.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,alice,stage_b,m,true)) || event(leaks(phase0,bob)) || event(leaks(phase0,alice)) cannot be proved.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,alice,stage_b,m,true)) || event(leaks(phase0,bob)) cannot be proved.<br />result not attacker_p1(msg_b(bob,alice)) cannot be proved.<br />result attacker_p1(msg_b(bob,alice)) ==> event(leaks(phase0,alice)) || event(leaks(phase1,alice)) cannot be proved.<br />result attacker_p1(msg_b(bob,alice)) ==> event(leaks(phase0,alice)) || (event(leaks(phase1,alice)) && event(leaks(p,bob))) cannot be proved.<br />result attacker_p1(msg_b(bob,alice)) ==> event(leaks(phase0,alice)) cannot be proved.<br />result event(recvmsg(bob,alice,stage_c,m,true)) ==> event(sendmsg(alice,bob,stage_c,m,true)) is false.<br />result event(recvmsg(bob,alice,stage_c,m,true)) ==> event(sendmsg(alice,c_990,stage_c,m,true)) || event(leaks(phase0,alice)) || event(leaks(phase0,bob)) is false.<br />result event(recvmsg(bob,alice,stage_c,m,true)) ==> event(sendmsg(alice,c_990,stage_c,m,true)) || event(leaks(phase0,alice)) is false.<br />result event(recvmsg(bob,alice,stage_c,m,true)) ==> event(sendmsg(alice,bob,stage_c,m,true)) || event(leaks(phase0,alice)) || event(leaks(phase0,bob)) is false.<br />result event(recvmsg(bob,alice,stage_c,m,true)) ==> event(sendmsg(alice,bob,stage_c,m,true)) || event(leaks(phase0,alice)) is false.<br />result not attacker_p1(msg_c(alice,bob)) cannot be proved.<br />result attacker_p1(msg_c(alice,bob)) ==> event(leaks(phase0,bob)) || event(leaks(phase1,bob)) is true.<br />result attacker_p1(msg_c(alice,bob)) ==> event(leaks(phase0,bob)) || (event(leaks(phase1,bob)) && event(leaks(p,alice))) is true.<br />result attacker_p1(msg_c(alice,bob)) ==> event(leaks(phase0,bob)) is true.<br />result event(recvmsg(alice,bob,stage_d,m,true)) ==> event(sendmsg(bob,alice,stage_d,m,true)) is false.<br />result event(recvmsg(alice,bob,stage_d,m,true)) ==> event(sendmsg(bob,c_990,stage_d,m,true)) || event(leaks(phase0,bob)) || event(leaks(phase0,alice)) is true.<br />result event(recvmsg(alice,bob,stage_d,m,true)) ==> event(sendmsg(bob,c_990,stage_d,m,true)) || event(leaks(phase0,bob)) is true.
 <h2>raw results &mdash; passive attacker</h2>
 result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,bob,stage_a,m,true)) is true.<br />result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,c_772,stage_a,m,true)) || event(leaks(phase0,alice)) || event(leaks(phase0,bob)) is true.<br />result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,c_772,stage_a,m,true)) || event(leaks(phase0,alice)) is true.<br />result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,bob,stage_a,m,true)) || event(leaks(phase0,alice)) || event(leaks(phase0,bob)) is true.<br />result event(recvmsg(bob,alice,stage_a,m,true)) ==> event(sendmsg(alice,bob,stage_a,m,true)) || event(leaks(phase0,alice)) is true.<br />result not attacker_p1(msg_a(alice,bob)) cannot be proved.<br />result attacker_p1(msg_a(alice,bob)) ==> event(leaks(phase0,bob)) || event(leaks(phase1,bob)) cannot be proved.<br />result attacker_p1(msg_a(alice,bob)) ==> event(leaks(phase0,bob)) || (event(leaks(phase1,bob)) && event(leaks(p,alice))) cannot be proved.<br />result attacker_p1(msg_a(alice,bob)) ==> event(leaks(phase0,bob)) cannot be proved.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,alice,stage_b,m,true)) cannot be proved.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,c_772,stage_b,m,true)) || event(leaks(phase0,bob)) || event(leaks(phase0,alice)) is true.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,c_772,stage_b,m,true)) || event(leaks(phase0,bob)) is true.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,alice,stage_b,m,true)) || event(leaks(phase0,bob)) || event(leaks(phase0,alice)) cannot be proved.<br />result event(recvmsg(alice,bob,stage_b,m,true)) ==> event(sendmsg(bob,alice,stage_b,m,true)) || event(leaks(phase0,bob)) cannot be proved.<br />result not attacker_p1(msg_b(bob,alice)) is true.<br />result attacker_p1(msg_b(bob,alice)) ==> event(leaks(phase0,alice)) || event(leaks(phase1,alice)) is true.<br />result attacker_p1(msg_b(bob,alice)) ==> event(leaks(phase0,alice)) || (event(leaks(phase1,alice)) && event(leaks(p,bob))) is true.<br />result attacker_p1(msg_b(bob,alice)) ==> event(leaks(phase0,alice)) is true.<br />result not event(recvend(true)) cannot be proved.
 <br /><br />
