--- a/src/html/patterns/X1K.noise.html
+++ b/src/html/patterns/X1K.noise.html
@@ -26,11 +26,11 @@
 			<a href="../cmd">Command-Line Tool</a>
 		</div>
 	</div>
-	<div class="results" style="height:1110px">
+	<div class="results" style="height: 1110px;">
 		<div class="arrowsFrame">
 			<h1 id="patternName">X1K</h1>
-			<div class="arrows" style="height:1110px">
-				<svg id="patternArrows" style="height:1110px">
+			<div class="arrows" style="height: 1110px;">
+				<svg id="patternArrows" style="height: 1110px;">
 					<line x2="248" y1="30" y2="30"></line>
 					<polyline  points="10 20 1 30 10 40"></polyline>
 					<text class="tokens" x="120" y="22">s</text>
@@ -62,7 +62,7 @@
 				</svg>
 			</div>
 		</div>
-		<div class="resultsExplanation" style="height:1110px">
+		<div class="resultsExplanation" style="height: 1110px;">
 			<h2>Noise Pattern Analysis</h2>
 			<p>The responder is initialized with a pre-shared long-term static key, which is assumed to be pre-authenticated out of band by the initiator.</p> 
 			
