--- a/src/html/patterns/XX.noise.html
+++ b/src/html/patterns/XX.noise.html
@@ -26,11 +26,11 @@
 			<a href="../cmd">Command-Line Tool</a>
 		</div>
 	</div>
-	<div class="results" style="height:705px">
+	<div class="results" style="height: 705px;">
 		<div class="arrowsFrame">
 			<h1 id="patternName">XX</h1>
-			<div class="arrows" style="height:705px">
-				<svg id="patternArrows" style="height:705px">
+			<div class="arrows" style="height: 705px;">
+				<svg id="patternArrows" style="height: 705px;">
 					<line data-seclevel="0" x1="1" x2="248" y1="30" y2="30"></line>
 					<polyline data-seclevel="0" points="237 20 248 30 237 40"></polyline>
 					<circle data-seclevel="0" cx="17" cy="30" r="15"></circle>
@@ -55,7 +55,7 @@
 				</svg>
 			</div>
 		</div>
-		<div class="resultsExplanation" style="height:705px">
+		<div class="resultsExplanation" style="height: 705px;">
 			<h2>Noise Pattern Analysis</h2>
 			
 			<h3>Message A</h3>
