--- a/src/html/patterns/KX.noise.html
+++ b/src/html/patterns/KX.noise.html
@@ -26,11 +26,11 @@
 			<a href="../cmd">Command-Line Tool</a>
 		</div>
 	</div>
-	<div class="results" style="height:840px">
+	<div class="results" style="height: 840px;">
 		<div class="arrowsFrame">
 			<h1 id="patternName">KX</h1>
-			<div class="arrows" style="height:840px">
-				<svg id="patternArrows" style="height:840px">
+			<div class="arrows" style="height: 840px;">
+				<svg id="patternArrows" style="height: 840px;">
 					<line x1="1" x2="248" y1="30" y2="30"></line>
 					<polyline points="237 20 248 30 237 40"></polyline>
 					<text class="tokens" x="120" y="22">s</text>
@@ -54,7 +54,7 @@
 				</svg>
 			</div>
 		</div>
-		<div class="resultsExplanation" style="height:840px">
+		<div class="resultsExplanation" style="height: 840px;">
 			<h2>Noise Pattern Analysis</h2>
 			<p>The initiator is initialized with a pre-shared long-term static key, which is assumed to be pre-authenticated out of band by the responder.</p> 
 			
