--- a/src/html/patterns/XK1.noise.html
+++ b/src/html/patterns/XK1.noise.html
@@ -26,11 +26,11 @@
 			<a href="../cmd">Command-Line Tool</a>
 		</div>
 	</div>
-	<div class="results" style="height:975px">
+	<div class="results" style="height: 975px;">
 		<div class="arrowsFrame">
 			<h1 id="patternName">XK1</h1>
-			<div class="arrows" style="height:975px">
-				<svg id="patternArrows" style="height:975px">
+			<div class="arrows" style="height: 975px;">
+				<svg id="patternArrows" style="height: 975px;">
 					<line x2="248" y1="30" y2="30"></line>
 					<polyline  points="10 20 1 30 10 40"></polyline>
 					<text class="tokens" x="120" y="22">s</text>
@@ -58,7 +58,7 @@
 				</svg>
 			</div>
 		</div>
-		<div class="resultsExplanation" style="height:975px">
+		<div class="resultsExplanation" style="height: 975px;">
 			<h2>Noise Pattern Analysis</h2>
 			<p>The responder is initialized with a pre-shared long-term static key, which is assumed to be pre-authenticated out of band by the initiator.</p> 
 			
