Update command-line page.

--- a/src/html/cmd/index.html
+++ b/src/html/cmd/index.html
@@ -33,7 +33,7 @@
 			<p>Noise Explorer can also render results from the ProVerif output into an elegant and easy to read HTML format: the <a href="../patterns">pattern results</a> that can be explored on this very website were generated using the Noise Explorer command-line tool.</p>
 <pre>
 $> node noiseExplorer --help
-Noise Explorer v0.2
+Noise Explorer version 0.3 (specification revision 34)
 	Noise Explorer can either generate models or render results, and the parameters
 	for either must be invoked exclusively.
 
