Add N and X to compendium index.

--- a/src/html/patterns/index.html
+++ b/src/html/patterns/index.html
@@ -76,6 +76,12 @@ KX:
   -&gt; e
   &lt;- e, ee, se, s, es
 </a>
+<a href="N.noise.html" class="patternEntry">
+N:
+  &lt;- s
+  ...
+  -&gt; e, es
+</a>
 <a href="NK.noise.html" class="patternEntry">
 NK:
   &lt;- s
@@ -125,6 +131,12 @@ NX1:
   -&gt; e
   &lt;- e, ee, s
   -&gt; es
+</a>
+<a href="X.noise.html" class="patternEntry">
+X:
+  &lt;- s
+  ...
+  -&gt; e, es, s, ss
 </a>
 <a href="X1K.noise.html" class="patternEntry">
 X1K:
