--- a/src/html/patterns/index.html
+++ b/src/html/patterns/index.html
@@ -197,6 +197,13 @@ X1K1:
   -&gt; s
   &lt;- se
 </a>
+<a href="X1N.noise.html" class="patternEntry">
+X1N:
+  -&gt; e
+  &lt;- e, ee
+  -&gt; s
+  &lt;- se
+</a>
 <a href="X1X.noise.html" class="patternEntry">
 X1X:
   -&gt; e
