--- a/src/html/patterns/K1N/index.html
+++ b/src/html/patterns/K1N/index.html
@@ -15,7 +15,7 @@
 
 <body>
 	<div class="header">
-		<img id="logo" src="../res/img/logo.png" alt="" />
+		<img id="logo" src="../../res/img/logo.png" alt="" />
 		<h1>Noise Explorer <span class="beta">beta</span></h1>
 	</div>
 	<div class="nav">
