--- a/src/html/patterns/IN/A.html
+++ b/src/html/patterns/IN/A.html
@@ -93,12 +93,12 @@ letfun readMessage_a(me:principal, them:principal, hs:handshakestate, message:bi
 </p>
 <h4>How each token is processed by the responder:</h4>
 <ul>
-<li><span class="mono">e</span>: Signals that the responder is receiving a fresh ephemeral key share as part of this message. This token adds the following state transformations to <span class="mono">sendMessage_a</span>:</li>
+<li><span class="mono">e</span>: Signals that the responder is receiving a fresh ephemeral key share as part of this message. This token adds the following state transformations to <span class="mono">readMessage_a</span>:</li>
 <ul>
 <li><span class="mono">mixHash</span>, which hashes the new key into the session hash.</li>
 </ul></ul>
 <ul>
-<li><span class="mono">s</span>: Signals that the responder is receiving a static key share as part of this message. This token adds the following state transformations to <span class="mono">sendMessage_a</span>:</li>
+<li><span class="mono">s</span>: Signals that the responder is receiving a static key share as part of this message. This token adds the following state transformations to <span class="mono">readMessage_a</span>:</li>
 <ul>
 <li><span class="mono">encryptAndHash</span> is called on the static public key. If any prior Diffie-Hellman shared secret was established between the sender and the recipient, this allows the initiator to communicate their long-term identity with some degree of confidentiality.</li>
 </ul></ul>
