--- a/src/html/patterns/K1X/A.html
+++ b/src/html/patterns/K1X/A.html
@@ -85,7 +85,7 @@ letfun readMessage_a(me:principal, them:principal, hs:handshakestate, message:bi
 </p>
 <h4>How each token is processed by the responder:</h4>
 <ul>
-<li><span class="mono">e</span>: Signals that the responder is receiving a fresh ephemeral key share as part of this message. This token adds the following state transformations to <span class="mono">sendMessage_a</span>:</li>
+<li><span class="mono">e</span>: Signals that the responder is receiving a fresh ephemeral key share as part of this message. This token adds the following state transformations to <span class="mono">readMessage_a</span>:</li>
 <ul>
 <li><span class="mono">mixHash</span>, which hashes the new key into the session hash.</li>
 </ul></ul>
