--- a/src/html/patterns/X1K1/C.html
+++ b/src/html/patterns/X1K1/C.html
@@ -81,7 +81,7 @@ letfun readMessage_c(me:principal, them:principal, hs:handshakestate, message:bi
 </p>
 <h4>How each token is processed by the responder:</h4>
 <ul>
-<li><span class="mono">s</span>: Signals that the responder is receiving a static key share as part of this message. This token adds the following state transformations to <span class="mono">sendMessage_c</span>:</li>
+<li><span class="mono">s</span>: Signals that the responder is receiving a static key share as part of this message. This token adds the following state transformations to <span class="mono">readMessage_c</span>:</li>
 <ul>
 <li><span class="mono">encryptAndHash</span> is called on the static public key. If any prior Diffie-Hellman shared secret was established between the sender and the recipient, this allows the initiator to communicate their long-term identity with some degree of confidentiality.</li>
 </ul></ul>
