--- a/src/html/patterns/X1K1/D.html
+++ b/src/html/patterns/X1K1/D.html
@@ -82,7 +82,7 @@ letfun readMessage_d(me:principal, them:principal, hs:handshakestate, message:bi
 </p>
 <h4>How each token is processed by the initiator:</h4>
 <ul>
-<li><span class="mono">se</span>: Signals that the initiator is calculating a Diffie-Hellman shared secret derived from the initiator's static key and the responder's ephemeral key as part of this message. This token adds the following state transformations to <span class="mono">sendMessage_d</span>:</li>
+<li><span class="mono">se</span>: Signals that the initiator is calculating a Diffie-Hellman shared secret derived from the initiator's static key and the responder's ephemeral key as part of this message. This token adds the following state transformations to <span class="mono">readMessage_d</span>:</li>
 <ul>
 <li><span class="mono">mixKey</span>, which calls the HKDF function using, as input, the existing <span class="mono">SymmetricState</span> key, and <span class="mono">dh(s, re)</span>, the Diffie-Hellman share calculated from the initiator's static key and the responder's ephemeral key.</li>
 </ul></ul>
