--- a/src/html/patterns/X1N/B.html
+++ b/src/html/patterns/X1N/B.html
@@ -92,12 +92,12 @@ letfun readMessage_b(me:principal, them:principal, hs:handshakestate, message:bi
 </p>
 <h4>How each token is processed by the initiator:</h4>
 <ul>
-<li><span class="mono">e</span>: Signals that the initiator is receiving a fresh ephemeral key share as part of this message. This token adds the following state transformations to <span class="mono">sendMessage_b</span>:</li>
+<li><span class="mono">e</span>: Signals that the initiator is receiving a fresh ephemeral key share as part of this message. This token adds the following state transformations to <span class="mono">readMessage_b</span>:</li>
 <ul>
 <li><span class="mono">mixHash</span>, which hashes the new key into the session hash.</li>
 </ul></ul>
 <ul>
-<li><span class="mono">ee</span>: Signals that the initiator is calculating a Diffie-Hellman shared secret derived from the initiator's ephemeral key and the responder's ephemeral key as part of this message. This token adds the following state transformations to <span class="mono">sendMessage_b</span>:</li>
+<li><span class="mono">ee</span>: Signals that the initiator is calculating a Diffie-Hellman shared secret derived from the initiator's ephemeral key and the responder's ephemeral key as part of this message. This token adds the following state transformations to <span class="mono">readMessage_b</span>:</li>
 <ul>
 <li><span class="mono">mixKey</span>, which calls the HKDF function using, as input, the existing <span class="mono">SymmetricState</span> key, and <span class="mono">dh(e, re)</span>, the Diffie-Hellman share calculated from the initiator's ephemeral key and the responder's ephemeral key.</li>
 </ul></ul>
