Remove 'spell checking' on model input.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -48,7 +48,7 @@
 			</ul>
 			<h3>Design your Noise Handshake Pattern</h3>
 			<div class="patternEditor">
-				<textarea id="patternInput"></textarea>
+				<textarea id="patternInput" spellcheck="false"></textarea>
 				<div id="patternInputParseStatus"></div>
 			</div>
 			<h3>Download Cryptographic Models for Formal Verification</h3>
