Update PSK results so far.

--- a/src/html/patterns/index.html
+++ b/src/html/patterns/index.html
@@ -329,6 +329,140 @@
 				&lt;- e, ee, s
 				-&gt; se, es
 			</a>
+			<a href="Npsk0" class="patternEntry">
+				Npsk0:
+				&lt;- s
+				...
+				-&gt; psk, e, es
+			</a>
+			<a href="Kpsk0" class="patternEntry">
+				Kpsk0:
+				-&gt; s
+				&lt;- s
+				...
+				-&gt; psk, e, es, ss
+			</a>
+			<a href="Xpsk1" class="patternEntry">
+				Xpsk1:
+				&lt;- s
+				...
+				-&gt; e, es, s, ss, psk
+			</a>
+			<a href="NNpsk0" class="patternEntry">
+				NNpsk0:
+				-&gt; psk, e
+				&lt;- e, ee
+			</a>
+			<a href="NNpsk2" class="patternEntry">
+				NNpsk2:
+				-&gt; e
+				&lt;- e, ee, psk
+			</a>
+			<a href="NKpsk0" class="patternEntry">
+				NKpsk0:
+				&lt;- s
+				...
+				-&gt; psk, e, es
+				&lt;- e, ee
+			</a>
+			<a href="NKpsk2" class="patternEntry">
+				NKpsk2:
+				&lt;- s
+				...
+				-&gt; e, es
+				&lt;- e, ee, psk
+			</a>
+			<a href="NXpsk2" class="patternEntry">
+				NXpsk2:
+				-&gt; e
+				&lt;- e, ee, s, es, psk
+			</a>
+			<a href="XNpsk3" class="patternEntry">
+				XNpsk3:
+				-&gt; e
+				&lt;- e, ee
+				-&gt; s, se, psk
+			</a>
+			<a href="XKpsk3" class="patternEntry">
+				XKpsk3:
+				&lt;- s
+				...
+				-&gt; e, es
+				&lt;- e, ee
+				-&gt; s, se, psk
+			</a>
+			<a href="XXpsk3" class="patternEntry">
+				XXpsk3:
+				-&gt; e
+				&lt;- e, ee, s, es
+				-&gt; s, se, psk
+			</a>
+			<a href="KNpsk0" class="patternEntry">
+				KNpsk0:
+				-&gt; s
+				...
+				-&gt; psk, e
+				&lt;- e, ee, se
+			</a>
+			<a href="KNpsk2" class="patternEntry">
+				KNpsk2:
+				-&gt; s
+				...
+				-&gt; e
+				&lt;- e, ee, se, psk
+			</a>
+			<a href="KKpsk0" class="patternEntry">
+				KKpsk0:
+				-&gt; s
+				&lt;- s
+				...
+				-&gt; psk, e, es, ss
+				&lt;- e, ee, se
+			</a>
+			<a href="KKpsk2" class="patternEntry">
+				KKpsk2:
+				-&gt; s
+				&lt;- s
+				...
+				-&gt; e, es, ss
+				&lt;- e, ee, se, psk
+			</a>
+			<a href="KXpsk2" class="patternEntry">
+				KXpsk2:
+				-&gt; s
+				...
+				-&gt; e
+				&lt;- e, ee, se, s, es, psk
+			</a>
+			<a href="INpsk1" class="patternEntry">
+				INpsk1:
+				-&gt; e, s, psk
+				&lt;- e, ee, se
+			</a>
+			<a href="INpsk2" class="patternEntry">
+				INpsk2:
+				-&gt; e, s
+				&lt;- e, ee, se, psk
+			</a>
+			<a href="IKpsk1" class="patternEntry">
+				IKpsk1:
+				&lt;- s
+				...
+				-&gt; e, es, s, ss, psk
+				&lt;- e, ee, se
+			</a>
+			<a href="IKpsk2" class="patternEntry">
+				IKpsk2:
+				&lt;- s
+				...
+				-&gt; e, es, s, ss
+				&lt;- e, ee, se, psk
+			</a>
+			<a href="IXpsk2" class="patternEntry">
+				IXpsk2:
+				-&gt; e, s
+				&lt;- e, ee, se, s, es, psk
+			</a>
 		</div>
 	</div>
 	<div class="footer">
