--- a/src/html/patterns/INpsk1/C.html
+++ b/src/html/patterns/INpsk1/C.html
@@ -31,8 +31,8 @@
 			<h1 id="patternName"><a href="index.html">INpsk1</a></h1>
 			<div class="arrows">
 				<svg id="patternArrows">
-					<line data-seclevel="3" x1="1" x2="500" y1="70" y2="70"></line>
-					<polyline data-seclevel="3" points="480,50 500,70 480,90"></polyline>
+					<line data-seclevel="5" x1="1" x2="500" y1="70" y2="70"></line>
+					<polyline data-seclevel="5" points="480,50 500,70 480,90"></polyline>
 					<circle data-seclevel="4" cx="29" cy="70" r="25"></circle>
 					<text class="msg" x="29" y="77">c</text>
 					<text class="tokens" x="240" y="50"></text>
@@ -97,10 +97,10 @@ Message <span class="mono">C</span> is tested against four authentication querie
 <p class="proverif"><br />RESULT attacker_p1(msg_c(alice,bob,sid_a)) ==> event(LeakPsk(phase0,alice,bob)) || event(LeakPsk(phase1,alice,bob)) is true.</p>
 <p>In this query, we test for <em>message secrecy</em> by checking if an active attacker is able to retrieve the payload plaintext only by compromising Bob's static key either before or after the protocol session.</p>
 <h4>Confidentiality Grade 3: <span class="passed">Passed</span></h4>
-<p class="proverif"><br />RESULT attacker_p1(msg_c(alice,bob,sid_a)) ==> (event(LeakPsk(phase0,alice,bob)) && event(LeakS(p,alice))) is true.</p>
+<p class="proverif"><br />RESULT attacker_p1(msg_c(alice,bob,sid_a)) ==> event(LeakPsk(phase0,alice,bob)) || (event(LeakPsk(py,alice,bob)) && event(LeakS(pz,alice))) is true.</p>
 <p>In this query, we test for <em>forward secrecy</em> by checking if a passive attacker is able to retrieve the payload plaintext only by compromising Bob's static key before the protocol session, or after the protocol session along with Alice's static public key (at any time.)</p>
-<h4>Confidentiality Grade 4: <span class="failed">Failed</span></h4>
-<p class="proverif"><br />RESULT attacker_p1(msg_c(alice,bob,sid_a)) ==> (event(LeakPsk(phase0,alice,bob)) && event(LeakS(p,alice))) cannot be proved.</p>
+<h4>Confidentiality Grade 4: <span class="passed">Passed</span></h4>
+<p class="proverif"><br />RESULT attacker_p1(msg_c(alice,bob,sid_a)) ==> event(LeakPsk(phase0,alice,bob)) || (event(LeakPsk(py,alice,bob)) && event(LeakS(pz,alice))) is true.</p>
 <p>In this query, we test for <em>weak forward secrecy</em> by checking if an active attacker is able to retrieve the payload plaintext only by compromising Bob's static key before the protocol session, or after the protocol session along with Alice's static public key (at any time.)</p>
 <h4>Confidentiality Grade 5: <span class="passed">Passed</span></h4>
 <p class="proverif"><br />RESULT attacker_p1(msg_c(alice,bob,sid_a)) ==> event(LeakPsk(phase0,alice,bob)) is true.</p>
