--- a/src/html/patterns/NXpsk2/B.html
+++ b/src/html/patterns/NXpsk2/B.html
@@ -164,10 +164,10 @@ Message <span class="mono">B</span> is tested against four authentication querie
 <p class="proverif"><br />RESULT attacker_p1(msg_b(bob,alice,sid_b)) ==> event(LeakPsk(phase0,alice,bob)) || event(LeakPsk(phase1,alice,bob)) is true.</p>
 <p>In this query, we test for <em>message secrecy</em> by checking if an active attacker is able to retrieve the payload plaintext only by compromising Alice's static key either before or after the protocol session.</p>
 <h4>Confidentiality Grade 3: <span class="passed">Passed</span></h4>
-<p class="proverif"><br />RESULT attacker_p1(msg_b(bob,alice,sid_b)) ==> (event(LeakPsk(phase0,alice,bob)) && event(LeakS(p,bob))) is true.</p>
+<p class="proverif"><br />RESULT attacker_p1(msg_b(bob,alice,sid_b)) ==> event(LeakPsk(phase0,alice,bob)) || (event(LeakPsk(py,alice,bob)) && event(LeakS(pz,bob))) is true.</p>
 <p>In this query, we test for <em>forward secrecy</em> by checking if a passive attacker is able to retrieve the payload plaintext only by compromising Alice's static key before the protocol session, or after the protocol session along with Bob's static public key (at any time.)</p>
 <h4>Confidentiality Grade 4: <span class="failed">Failed</span></h4>
-<p class="proverif"><br />RESULT attacker_p1(msg_b(bob,alice,sid_b)) ==> (event(LeakPsk(phase0,alice,bob)) && event(LeakS(p,bob))) cannot be proved.</p>
+<p class="proverif"><br />RESULT attacker_p1(msg_b(bob,alice,sid_b)) ==> event(LeakPsk(phase0,alice,bob)) || (event(LeakPsk(py,alice,bob)) && event(LeakS(pz,bob))) cannot be proved.</p>
 <p>In this query, we test for <em>weak forward secrecy</em> by checking if an active attacker is able to retrieve the payload plaintext only by compromising Alice's static key before the protocol session, or after the protocol session along with Bob's static public key (at any time.)</p>
 <h4>Confidentiality Grade 5: <span class="failed">Failed</span></h4>
 <p class="proverif"><br />RESULT attacker_p1(msg_b(bob,alice,sid_b)) ==> event(LeakPsk(phase0,alice,bob)) cannot be proved.</p>
