--- a/src/html/patterns/XKpsk3/index.html
+++ b/src/html/patterns/XKpsk3/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Noise Explorer: KNpsk2</title>
+	<title>Noise Explorer: XKpsk3</title>
 	<meta name="keywords" content="noise protocol, protocol verification, formal verification, noise protocol framework, symbolic verification" />
 	<meta name="description" content="Noise Explorer is an online engine for reasoning about Noise Protocol Framework Handshake Patterns. Noise Explorer allows you to design and validate Noise Handshake Patterns, to generate cryptographic models for formal verification and to explore a compendium of formal verification results for the most popular and relevant Noise Handshake Patterns in use today." />
 	<link rel="image_src" href="https://noiseexplorer.com/res/img/logo.png" />
@@ -16,8 +16,8 @@
 	<script type="application/javascript" src="../../res/js/noiseWebIde.js"></script>
 	<script type="application/javascript">
 	window.addEventListener('load', () => {
-		pvModelGen(['KNpsk2:','    -> s','    ...','    -> e','    <- e, ee, se, psk','->','<-'].join('\n'), 'active', 'pvModelActiveLink', false);
-		pvModelGen(['KNpsk2:','    -> s','    ...','    -> e','    <- e, ee, se, psk','->','<-'].join('\n'), 'passive', 'pvModelPassiveLink', false);
+		pvModelGen(['XKpsk3:','   <- s','   ...','   -> e, es','   <- e, ee','   -> s, se, psk','   <-','   ->'].join('\n'), 'active', 'pvModelActiveLink', false);
+		pvModelGen(['XKpsk3:','   <- s','   ...','   -> e, es','   <- e, ee','   -> s, se, psk','   <-','   ->'].join('\n'), 'passive', 'pvModelPassiveLink', false);
 	});
 	</script>
 </head>
@@ -35,13 +35,13 @@
 			<a href="../../cmd">Command-Line Tool</a>
 		</div>
 	</div>
-	<div class="results" style="height: 1170px;">
+	<div class="results" style="height: 1360px;">
 		<div class="arrowsFrame">
-			<h1 id="patternName">KNpsk2</h1>
-			<div class="arrows" style="height: 1170px;">
-				<svg id="patternArrows" style="height: 1170px;">
-					<line x1="1" x2="248" y1="30" y2="30"></line>
-					<polyline points="237 20 248 30 237 40"></polyline>
+			<h1 id="patternName">XKpsk3</h1>
+			<div class="arrows" style="height: 1360px;">
+				<svg id="patternArrows" style="height: 1360px;">
+					<line x2="248" y1="30" y2="30"></line>
+					<polyline  points="10 20 1 30 10 40"></polyline>
 					<text class="tokens" x="120" y="22">s</text>
 
 				<text class="ellipsis" x="120" y="220">...</text>
@@ -49,41 +49,49 @@
 					<polyline data-seclevel="0" points="237 400 248 410 237 420"></polyline>
 					<circle data-seclevel="0" cx="17" cy="410" r="15"></circle>
 					<text class="msg" x="16" y="415">a</text>
-					<text class="tokens" x="120" y="402">e</text>
-<line data-seclevel="3" x2="248" y1="600" y2="600"></line>
-					<polyline data-seclevel="3" points="10 590 1 600 10 610"></polyline>
-					<circle data-seclevel="1" cx="234" cy="600" r="15"></circle>
+					<text class="tokens" x="120" y="402">e, es</text>
+<line data-seclevel="1" x2="248" y1="600" y2="600"></line>
+					<polyline data-seclevel="1" points="10 590 1 600 10 610"></polyline>
+					<circle data-seclevel="0" cx="234" cy="600" r="15"></circle>
 					<text class="msg" x="233" y="605">b</text>
-					<text class="tokens" x="120" y="592">e, ee, se, psk</text>
-<line data-seclevel="5" x1="1" x2="248" y1="790" y2="790"></line>
-					<polyline data-seclevel="5" points="237 780 248 790 237 800"></polyline>
+					<text class="tokens" x="120" y="592">e, ee</text>
+<line data-seclevel="3" x1="1" x2="248" y1="790" y2="790"></line>
+					<polyline data-seclevel="3" points="237 780 248 790 237 800"></polyline>
 					<circle data-seclevel="4" cx="17" cy="790" r="15"></circle>
 					<text class="msg" x="16" y="795">c</text>
-					<text class="tokens" x="120" y="782"></text>
-<line data-seclevel="3" x2="248" y1="980" y2="980"></line>
-					<polyline data-seclevel="3" points="10 970 1 980 10 990"></polyline>
-					<circle data-seclevel="1" cx="234" cy="980" r="15"></circle>
+					<text class="tokens" x="120" y="782">s, se, psk</text>
+<line data-seclevel="5" x2="248" y1="980" y2="980"></line>
+					<polyline data-seclevel="5" points="10 970 1 980 10 990"></polyline>
+					<circle data-seclevel="4" cx="234" cy="980" r="15"></circle>
 					<text class="msg" x="233" y="985">d</text>
 					<text class="tokens" x="120" y="972"></text>
+<line data-seclevel="5" x1="1" x2="248" y1="1170" y2="1170"></line>
+					<polyline data-seclevel="5" points="237 1160 248 1170 237 1180"></polyline>
+					<circle data-seclevel="4" cx="17" cy="1170" r="15"></circle>
+					<text class="msg" x="16" y="1175">e</text>
+					<text class="tokens" x="120" y="1162"></text>
 				</svg>
 			</div>
 		</div>
-		<div class="resultsExplanation" style="height: 1170px;">
+		<div class="resultsExplanation" style="height: 1360px;">
 			<h2>Handshake Pattern Analysis</h2>
-			<p>The initiator is initialized with a pre-shared long-term static key, which is assumed to be pre-authenticated out of band by the responder.</p> 
+			<p>The responder is initialized with a pre-shared long-term static key, which is assumed to be pre-authenticated out of band by the initiator.</p> 
 			
 
 			<h3>Message A <a href="A.html" class="detailedAnalysis">show detailed analysis</a></h3>
 			<p>Message A, sent by the initiator, does not benefit from <em>sender authentication</em> and does not provide <em>message integrity</em>. It could have been sent by any party, including an active attacker. Message contents are sent in cleartext and do not benefit from <em>message secrecy</em> and any <em>forward secrecy</em> is out of the question.  <span class="resultNums">0,0</span></p>
 
 			<h3>Message B <a href="B.html" class="detailedAnalysis">show detailed analysis</a></h3>
-			<p>Message B, sent by the responder, benefits from <em>receiver authentication</em> but is <em>vulnerable to Key Compromise Impersonation</em>. If the initiator's long-term private key has been compromised, this authentication can be forged. However, if the responder carries out a separate session with a separate, compromised initiator, this other session can be used to forge the authentication of this message with this session's initiator. Message contents benefit from <em>message secrecy</em> and <em>weak forward secrecy</em> under a passive attacker: if the responder's long-term static keys were previously compromised, the later compromise of the initiator's long-term static keys can lead to message contents being decrypted by an attacker.  <span class="resultNums">1,3</span></p>
+			<p>Message B, sent by the responder, does not benefit from <em>sender authentication</em> and does not provide <em>message integrity</em>. It could have been sent by any party, including an active attacker. Message contents benefit from some <em>message secrecy</em> and some <em>forward secrecy</em>, but not sufficiently to resist any active attacker.  <span class="resultNums">0,1</span></p>
 
 			<h3>Message C <a href="C.html" class="detailedAnalysis">show detailed analysis</a></h3>
-			<p>Message C, sent by the initiator, benefits from <em>sender and receiver authentication</em> and is <em>resistant to Key Compromise Impersonation</em>. Assuming the corresponding private keys are secure, this authentication cannot be forged. Message contents benefit from <em>message secrecy</em> and <em>strong forward secrecy</em>: if the ephemeral private keys are secure and the responder is not being actively impersonated by an active attacker, message contents cannot be decrypted.  <span class="resultNums">4,5</span></p>
+			<p>Message C, sent by the initiator, benefits from <em>sender and receiver authentication</em> and is <em>resistant to Key Compromise Impersonation</em>. Assuming the corresponding private keys are secure, this authentication cannot be forged. Message contents benefit from <em>message secrecy</em> and <em>weak forward secrecy</em> under a passive attacker: if the initiator's long-term static keys were previously compromised, the later compromise of the responder's long-term static keys can lead to message contents being decrypted by an attacker.  <span class="resultNums">4,3</span></p>
 
 			<h3>Message D <a href="D.html" class="detailedAnalysis">show detailed analysis</a></h3>
-			<p>Message D, sent by the responder, benefits from <em>receiver authentication</em> but is <em>vulnerable to Key Compromise Impersonation</em>. If the initiator's long-term private key has been compromised, this authentication can be forged. However, if the responder carries out a separate session with a separate, compromised initiator, this other session can be used to forge the authentication of this message with this session's initiator. Message contents benefit from <em>message secrecy</em> and <em>weak forward secrecy</em> under a passive attacker: if the responder's long-term static keys were previously compromised, the later compromise of the initiator's long-term static keys can lead to message contents being decrypted by an attacker.  <span class="resultNums">1,3</span></p>
+			<p>Message D, sent by the responder, benefits from <em>sender and receiver authentication</em> and is <em>resistant to Key Compromise Impersonation</em>. Assuming the corresponding private keys are secure, this authentication cannot be forged. Message contents benefit from <em>message secrecy</em> and <em>strong forward secrecy</em>: if the ephemeral private keys are secure and the initiator is not being actively impersonated by an active attacker, message contents cannot be decrypted.  <span class="resultNums">4,5</span></p>
+
+			<h3>Message E <a href="E.html" class="detailedAnalysis">show detailed analysis</a></h3>
+			<p>Message E, sent by the initiator, benefits from <em>sender and receiver authentication</em> and is <em>resistant to Key Compromise Impersonation</em>. Assuming the corresponding private keys are secure, this authentication cannot be forged. Message contents benefit from <em>message secrecy</em> and <em>strong forward secrecy</em>: if the ephemeral private keys are secure and the responder is not being actively impersonated by an active attacker, message contents cannot be decrypted.  <span class="resultNums">4,5</span></p>
 			<h3>Download Cryptographic Models for Formal Verification</h3>
 			<p>
 				<a href="#" id="pvModelActiveLink">
