--- a/src/html/patterns/XNpsk3/index.html
+++ b/src/html/patterns/XNpsk3/index.html
@@ -55,13 +55,13 @@
 					<circle data-seclevel="4" cx="17" cy="410" r="15"></circle>
 					<text class="msg" x="16" y="415">c</text>
 					<text class="tokens" x="120" y="402">s, se, psk</text>
-<line data-seclevel="5" x2="248" y1="600" y2="600"></line>
-					<polyline data-seclevel="5" points="10 590 1 600 10 610"></polyline>
+<line data-seclevel="3" x2="248" y1="600" y2="600"></line>
+					<polyline data-seclevel="3" points="10 590 1 600 10 610"></polyline>
 					<circle data-seclevel="1" cx="234" cy="600" r="15"></circle>
 					<text class="msg" x="233" y="605">d</text>
 					<text class="tokens" x="120" y="592"></text>
-<line data-seclevel="3" x1="1" x2="248" y1="790" y2="790"></line>
-					<polyline data-seclevel="3" points="237 780 248 790 237 800"></polyline>
+<line data-seclevel="5" x1="1" x2="248" y1="790" y2="790"></line>
+					<polyline data-seclevel="5" points="237 780 248 790 237 800"></polyline>
 					<circle data-seclevel="4" cx="17" cy="790" r="15"></circle>
 					<text class="msg" x="16" y="795">e</text>
 					<text class="tokens" x="120" y="782"></text>
@@ -81,10 +81,10 @@
 			<p>Message C, sent by the initiator, benefits from <em>sender and receiver authentication</em> and is <em>resistant to Key Compromise Impersonation</em>. Assuming the corresponding private keys are secure, this authentication cannot be forged. Message contents benefit from <em>message secrecy</em> and <em>weak forward secrecy</em> under a passive attacker: if the initiator's long-term static keys were previously compromised, the later compromise of the responder's long-term static keys can lead to message contents being decrypted by an attacker.  <span class="resultNums">4,3</span></p>
 
 			<h3>Message D <a href="D.html" class="detailedAnalysis">show detailed analysis</a></h3>
-			<p>Message D, sent by the responder, benefits from <em>receiver authentication</em> but is <em>vulnerable to Key Compromise Impersonation</em>. If the initiator's long-term private key has been compromised, this authentication can be forged. However, if the responder carries out a separate session with a separate, compromised initiator, this other session can be used to forge the authentication of this message with this session's initiator. Message contents benefit from <em>message secrecy</em> and <em>strong forward secrecy</em>: if the ephemeral private keys are secure and the initiator is not being actively impersonated by an active attacker, message contents cannot be decrypted.  <span class="resultNums">1,5</span></p>
+			<p>Message D, sent by the responder, benefits from <em>receiver authentication</em> but is <em>vulnerable to Key Compromise Impersonation</em>. If the initiator's long-term private key has been compromised, this authentication can be forged. However, if the responder carries out a separate session with a separate, compromised initiator, this other session can be used to forge the authentication of this message with this session's initiator. Message contents benefit from <em>message secrecy</em> and <em>weak forward secrecy</em> under a passive attacker: if the responder's long-term static keys were previously compromised, the later compromise of the initiator's long-term static keys can lead to message contents being decrypted by an attacker.  <span class="resultNums">1,3</span></p>
 
 			<h3>Message E <a href="E.html" class="detailedAnalysis">show detailed analysis</a></h3>
-			<p>Message E, sent by the initiator, benefits from <em>sender and receiver authentication</em> and is <em>resistant to Key Compromise Impersonation</em>. Assuming the corresponding private keys are secure, this authentication cannot be forged. Message contents benefit from <em>message secrecy</em> and <em>weak forward secrecy</em> under a passive attacker: if the initiator's long-term static keys were previously compromised, the later compromise of the responder's long-term static keys can lead to message contents being decrypted by an attacker.  <span class="resultNums">4,3</span></p>
+			<p>Message E, sent by the initiator, benefits from <em>sender and receiver authentication</em> and is <em>resistant to Key Compromise Impersonation</em>. Assuming the corresponding private keys are secure, this authentication cannot be forged. Message contents benefit from <em>message secrecy</em> and <em>strong forward secrecy</em>: if the ephemeral private keys are secure and the responder is not being actively impersonated by an active attacker, message contents cannot be decrypted.  <span class="resultNums">4,5</span></p>
 			<h3>Download Cryptographic Models for Formal Verification</h3>
 			<p>
 				<a href="#" id="pvModelActiveLink">
