--- a/src/html/patterns/IKpsk2/B.html
+++ b/src/html/patterns/IKpsk2/B.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Noise Explorer: INpsk1 - Message B</title>
+	<title>Noise Explorer: IKpsk2 - Message B</title>
 	<meta name="keywords" content="noise protocol, protocol verification, formal verification, noise protocol framework, symbolic verification" />
 	<meta name="description" content="Noise Explorer is an online engine for reasoning about Noise Protocol Framework Handshake Patterns. Noise Explorer allows you to design and validate Noise Handshake Patterns, to generate cryptographic models for formal verification and to explore a compendium of formal verification results for the most popular and relevant Noise Handshake Patterns in use today." />
 	<link rel="image_src" href="https://noiseexplorer.com/res/img/logo.png" />
@@ -28,20 +28,20 @@
 	</div>
 	<div class="results detailed">
 		<div class="arrowsFrame">
-			<h1 id="patternName"><a href="index.html">INpsk1</a></h1>
+			<h1 id="patternName"><a href="index.html">IKpsk2</a></h1>
 			<div class="arrows">
 				<svg id="patternArrows">
 					<line data-seclevel="3" x1="5" x2="499" y1="70" y2="70"></line>
 					<polyline data-seclevel="3" points="25,50 5,70 25,90"></polyline>
-					<circle data-seclevel="1" cx="471" cy="70" r="25"></circle>
+					<circle data-seclevel="4" cx="471" cy="70" r="25"></circle>
 					<text class="msg" x="471" y="77">b</text>
-					<text class="tokens" x="240" y="50">e, ee, se</text>
+					<text class="tokens" x="240" y="50">e, ee, se, psk</text>
 				</svg>
 			</div>
 		</div>
 		<div class="resultsExplanation">
 			<h2>Message Pattern Analysis</h2>
-			<p>Message <span class="mono">B</span> is the second message in the <span class="mono">INpsk1</span> Noise Handshake Pattern. It is sent from the responder to the initiator. In this detailed analysis, we attempt to give you some insight into the protocol logic underlying this message. The insight given here does not fully extend down to fully illustrate the exact state transformations conducted by the formal model, but it does describe them at least informally in order to help illustrate how Message <span class="mono">B</span> affects the protocol.</p>
+			<p>Message <span class="mono">B</span> is the second message in the <span class="mono">IKpsk2</span> Noise Handshake Pattern. It is sent from the responder to the initiator. In this detailed analysis, we attempt to give you some insight into the protocol logic underlying this message. The insight given here does not fully extend down to fully illustrate the exact state transformations conducted by the formal model, but it does describe them at least informally in order to help illustrate how Message <span class="mono">B</span> affects the protocol.</p>
 <h3>Sending Message <span class="mono">B</span></h3>
 <p>In the applied pi calculus, the initiator's process prepares Message <span class="mono">B</span> using the following function:</p>
 <p class="proverif">
@@ -54,6 +54,7 @@ letfun writeMessage_b(me:principal, them:principal, hs:handshakestate, payload:b
 	let ss = mixKey(ss, getpublickey(e)) in
 	let ss = mixKey(ss, dh(e, re)) in
 	let ss = mixKey(ss, dh(e, rs)) in
+	let ss = mixKeyAndHash(ss, psk) in
 	let (ss:symmetricstate, ciphertext:bitstring) = encryptAndHash(ss, payload) in
 	let hs = handshakestatepack(ss, s, e, rs, re, psk, initiator) in
 	let message_buffer = concat3(ne, ns, ciphertext) in
@@ -76,6 +77,11 @@ letfun writeMessage_b(me:principal, them:principal, hs:handshakestate, payload:b
 <li><ul>
 <li><span class="mono">mixKey</span>, which calls the HKDF function using, as input, the existing <span class="mono">SymmetricState</span> key, and <span class="mono">dh(s, re)</span>, the Diffie-Hellman share calculated from the initiator's static key and the responder's ephemeral key.</li>
 </ul></li></ul>
+<ul>
+<li><span class="mono">psk</span>: Signals that the responder is calculating a new session secret that adds a pre-shared symmetric key as part of this message. This token adds the following state transformations to <span class="mono">writeMessage_b</span>:</li>
+<li><ul>
+<li> <span class="mono">mixKeyAndHash</span>, which mixes and hashes the PSK value into the state and then initializes a new state seeded by the result.</li>
+</ul></li></ul>
 <p>If a static public key was communicated as part of this message, it would have been encrypted as <span class="mono">ciphertext1</span>. However, since the initiator does not communicate a static public key here, that value is left empty.</p>
 <p>Message <span class="code">B</span>'s payload, which is modeled as the output of the function <span class="mono">msg_a(initiatorIdentity, responderIdentity, sessionId)</span>, is encrypted as <span class="mono">ciphertext2</span>. This invokes the following operations:</p><ul>
 <li><span class="mono">encryptAndHash</span>, which performs an authenticated encryption with added data (AEAD) on the payload, with the session hash as the added data (<span class="mono">encryptWithAd</span>) and <span class="mono">mixHash</span>, which hashes the encrypted payload into the next session hash.</li>
@@ -92,6 +98,7 @@ letfun readMessage_b(me:principal, them:principal, hs:handshakestate, message:bi
 	let ss = mixKey(ss, re) in
 	let ss = mixKey(ss, dh(e, re)) in
 	let ss = mixKey(ss, dh(s, re)) in
+	let ss = mixKeyAndHash(ss, psk) in
 	let (ss:symmetricstate, plaintext:bitstring, valid2:bool) = decryptAndHash(ss, ciphertext) in
 	if ((valid1 && valid2)) then (
 		let hs = handshakestatepack(ss, s, e, rs, re, psk, initiator) in
@@ -115,6 +122,11 @@ letfun readMessage_b(me:principal, them:principal, hs:handshakestate, message:bi
 <li><ul>
 <li><span class="mono">mixKey</span>, which calls the HKDF function using, as input, the existing <span class="mono">SymmetricState</span> key, and <span class="mono">dh(s, re)</span>, the Diffie-Hellman share calculated from the initiator's static key and the responder's ephemeral key.</li>
 </ul></li></ul>
+<ul>
+<li><span class="mono">psk</span>: Signals that the initiator is calculating a new session secret that adds a pre-shared symmetric key as part of this message. This token adds the following state transformations to <span class="mono">readMessage_b</span>:</li>
+<li><ul>
+<li> <span class="mono">mixKeyAndHash</span>, which mixes and hashes the PSK value into the state and then initializes a new state seeded by the result.</li>
+</ul></li></ul>
 <p>If a static public key was communicated as part of this message, it would have been encrypted as <span class="mono">ciphertext1</span>. However, since the initiator does not communicate a static public key here, that value is left empty.</p>
 <p>Message <span class="code">B</span>'s payload, which is modeled as the output of the function <span class="mono">msg_a(initiatorIdentity, responderIdentity, sessionId)</span>, is encrypted as <span class="mono">ciphertext2</span>. This invokes the following operations:</p><ul>
 <li><span class="mono">decryptAndHash</span>, which performs an authenticated decryption with added data (AEAD) on the payload, with the session hash as the added data (<span class="mono">decryptWithAd</span>) and <span class="mono">mixHash</span>, which hashes the encrypted payload into the next session hash.</li>
@@ -122,16 +134,16 @@ letfun readMessage_b(me:principal, them:principal, hs:handshakestate, message:bi
 <h3>Queries and Results</h3>
 Message <span class="mono">B</span> is tested against four authentication queries and five confidentiality queries.
 <h4>Authentication Grade 1: <span class="passed">Passed</span></h4>
-<p class="proverif"><br />RESULT event(RecvMsg(alice,bob,stagepack_b(sid_a),m)) ==> event(SendMsg(bob,c_1253,stagepack_b(sid_b),m)) || event(LeakPsk(phase0,alice,bob)) || (event(LeakS(phase0,alice)) && event(LeakPsk(phase0,alice,bob))) is true.</p>
+<p class="proverif"><br />RESULT event(RecvMsg(alice,bob,stagepack_b(sid_a),m)) ==> event(SendMsg(bob,c_1342,stagepack_b(sid_b),m)) || (event(LeakS(phase0,bob)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(phase0,alice)) && event(LeakPsk(phase0,alice,bob))) is true.</p>
 <p>In this query, we test for <em>sender authentication</em> and <em>message integrity</em>. If Alice receives a valid message from Bob, then Bob must have sent that message to <em>someone</em>, or Bob had their static key and PSK compromised before the session began, or Alice had their static key and PSK compromised before the session began.</p>
-<h4>Authentication Grade 2: <span class="failed">Failed</span></h4>
-<p class="proverif"><br />RESULT event(RecvMsg(alice,bob,stagepack_b(sid_a),m)) ==> event(SendMsg(bob,c_1253,stagepack_b(sid_b),m)) cannot be proved.</p>
+<h4>Authentication Grade 2: <span class="passed">Passed</span></h4>
+<p class="proverif"><br />RESULT event(RecvMsg(alice,bob,stagepack_b(sid_a),m)) ==> event(SendMsg(bob,c_1342,stagepack_b(sid_b),m)) || event(LeakS(phase0,bob)) is true.</p>
 <p>In this query, we test for <em>sender authentication</em> and is <em>Key Compromise Impersonation</em> resistance. If Alice receives a valid message from Bob, then Bob must have sent that message to <em>someone</em>, or Bob had their static key compromised before the session began.</p>
 <h4>Authentication Grade 3: <span class="passed">Passed</span></h4>
-<p class="proverif"><br />RESULT event(RecvMsg(alice,bob,stagepack_b(sid_a),m)) ==> event(SendMsg(bob,alice,stagepack_b(sid_b),m)) || event(LeakPsk(phase0,alice,bob)) || (event(LeakS(phase0,alice)) && event(LeakPsk(phase0,alice,bob))) is true.</p>
+<p class="proverif"><br />RESULT event(RecvMsg(alice,bob,stagepack_b(sid_a),m)) ==> event(SendMsg(bob,alice,stagepack_b(sid_b),m)) || (event(LeakS(phase0,bob)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(phase0,alice)) && event(LeakPsk(phase0,alice,bob))) is true.</p>
 <p>In this query, we test for <em>sender and receiver authentication</em> and <em>message integrity</em>. If Alice receives a valid message from Bob, then Bob must have sent that message to <em>Alice specifically</em>, or Bob had their static key and PSK compromised before the session began, or Alice had their static key and PSK compromised before the session began.</p>
-<h4>Authentication Grade 4: <span class="failed">Failed</span></h4>
-<p class="proverif"><br />RESULT event(RecvMsg(alice,bob,stagepack_b(sid_a),m)) ==> event(SendMsg(bob,alice,stagepack_b(sid_b),m)) cannot be proved.</p>
+<h4>Authentication Grade 4: <span class="passed">Passed</span></h4>
+<p class="proverif"><br />RESULT event(RecvMsg(alice,bob,stagepack_b(sid_a),m)) ==> event(SendMsg(bob,alice,stagepack_b(sid_b),m)) || event(LeakS(phase0,bob)) is true.</p>
 <p>In this query, we test for <em>sender and receiver authentication</em> and is <em>Key Compromise Impersonation</em> resistance. If Alice receives a valid message from Bob, then Bob must have sent that message to <em>Alice specifically</em>, or Bob had their static key compromised before the session began.</p>
 <h4>Confidentiality Grade 1: <span class="passed">Passed</span></h4>
 <p class="proverif"><br />RESULT attacker_p1(msg_b(bob,alice,sid_b)) ==> (event(LeakS(phase0,alice)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(phase0,alice)) && event(LeakPsk(phase1,alice,bob))) || (event(LeakS(phase1,alice)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(phase1,alice)) && event(LeakPsk(phase1,alice,bob))) is true.</p>
@@ -140,10 +152,10 @@ Message <span class="mono">B</span> is tested against four authentication querie
 <p class="proverif"><br />RESULT attacker_p1(msg_b(bob,alice,sid_b)) ==> (event(LeakS(phase0,alice)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(phase0,alice)) && event(LeakPsk(phase1,alice,bob))) || (event(LeakS(phase1,alice)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(phase1,alice)) && event(LeakPsk(phase1,alice,bob))) is true.</p>
 <p>In this query, we test for <em>message secrecy</em> by checking if an active attacker is able to retrieve the payload plaintext only by compromising Alice's static key and PSK either before or after the protocol session.</p>
 <h4>Confidentiality Grade 3: <span class="passed">Passed</span></h4>
-<p class="proverif"><br />RESULT not attacker_p1(msg_b(bob,alice,sid_b)) is true.</p>
+<p class="proverif"><br />RESULT attacker_p1(msg_b(bob,alice,sid_b)) ==> (event(LeakS(phase0,alice)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(px,alice)) && event(LeakPsk(py,alice,bob)) && event(LeakS(pz,bob))) is true.</p>
 <p>In this query, we test for <em>forward secrecy</em> by checking if a passive attacker is able to retrieve the payload plaintext only by compromising Alice's static key and PSK before the protocol session, or after the protocol session along with Bob's static public key (at any time.)</p>
 <h4>Confidentiality Grade 4: <span class="failed">Failed</span></h4>
-<p class="proverif"><br />RESULT not attacker_p1(msg_b(bob,alice,sid_b)) cannot be proved.</p>
+<p class="proverif"><br />RESULT attacker_p1(msg_b(bob,alice,sid_b)) ==> (event(LeakS(phase0,alice)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(px,alice)) && event(LeakPsk(py,alice,bob)) && event(LeakS(pz,bob))) cannot be proved.</p>
 <p>In this query, we test for <em>weak forward secrecy</em> by checking if an active attacker is able to retrieve the payload plaintext only by compromising Alice's static key and PSK before the protocol session, or after the protocol session along with Bob's static public key (at any time.)</p>
 <h4>Confidentiality Grade 5: <span class="failed">Failed</span></h4>
 <p class="proverif"><br />RESULT attacker_p1(msg_b(bob,alice,sid_b)) ==> (event(LeakS(phase0,alice)) && event(LeakPsk(phase0,alice,bob))) cannot be proved.</p>
