--- a/src/html/patterns/IKpsk2/C.html
+++ b/src/html/patterns/IKpsk2/C.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Noise Explorer: KNpsk2 - Message A</title>
+	<title>Noise Explorer: IKpsk2 - Message C</title>
 	<meta name="keywords" content="noise protocol, protocol verification, formal verification, noise protocol framework, symbolic verification" />
 	<meta name="description" content="Noise Explorer is an online engine for reasoning about Noise Protocol Framework Handshake Patterns. Noise Explorer allows you to design and validate Noise Handshake Patterns, to generate cryptographic models for formal verification and to explore a compendium of formal verification results for the most popular and relevant Noise Handshake Patterns in use today." />
 	<link rel="image_src" href="https://noiseexplorer.com/res/img/logo.png" />
@@ -28,99 +28,82 @@
 	</div>
 	<div class="results detailed">
 		<div class="arrowsFrame">
-			<h1 id="patternName"><a href="index.html">KNpsk2</a></h1>
+			<h1 id="patternName"><a href="index.html">IKpsk2</a></h1>
 			<div class="arrows">
 				<svg id="patternArrows">
-					<line data-seclevel="0" x1="1" x2="500" y1="70" y2="70"></line>
-					<polyline data-seclevel="0" points="480,50 500,70 480,90"></polyline>
-					<circle data-seclevel="0" cx="29" cy="70" r="25"></circle>
-					<text class="msg" x="29" y="77">a</text>
-					<text class="tokens" x="240" y="50">e</text>
+					<line data-seclevel="5" x1="1" x2="500" y1="70" y2="70"></line>
+					<polyline data-seclevel="5" points="480,50 500,70 480,90"></polyline>
+					<circle data-seclevel="4" cx="29" cy="70" r="25"></circle>
+					<text class="msg" x="29" y="77">c</text>
+					<text class="tokens" x="240" y="50"></text>
 				</svg>
 			</div>
 		</div>
 		<div class="resultsExplanation">
 			<h2>Message Pattern Analysis</h2>
-			<p>Message <span class="mono">A</span> is the first message in the <span class="mono">KNpsk2</span> Noise Handshake Pattern. It is sent from the initiator to the responder. In this detailed analysis, we attempt to give you some insight into the protocol logic underlying this message. The insight given here does not fully extend down to fully illustrate the exact state transformations conducted by the formal model, but it does describe them at least informally in order to help illustrate how Message <span class="mono">A</span> affects the protocol.</p>
-<h3>Sending Message <span class="mono">A</span></h3>
-<p>In the applied pi calculus, the initiator's process prepares Message <span class="mono">A</span> using the following function:</p>
+			<p>Message <span class="mono">C</span> is the third message in the <span class="mono">IKpsk2</span> Noise Handshake Pattern. It is sent from the initiator to the responder. In this detailed analysis, we attempt to give you some insight into the protocol logic underlying this message. The insight given here does not fully extend down to fully illustrate the exact state transformations conducted by the formal model, but it does describe them at least informally in order to help illustrate how Message <span class="mono">C</span> affects the protocol.</p>
+<h3>Sending Message <span class="mono">C</span></h3>
+<p>In the applied pi calculus, the initiator's process prepares Message <span class="mono">C</span> using the following function:</p>
 <p class="proverif">
-letfun writeMessage_a(me:principal, them:principal, hs:handshakestate, payload:bitstring, sid:sessionid) =
+letfun writeMessage_c(me:principal, them:principal, hs:handshakestate, payload:bitstring, sid:sessionid) =
 	let (ss:symmetricstate, s:keypair, e:keypair, rs:key, re:key, psk:key, initiator:bool) = handshakestateunpack(hs) in
 	let (ne:bitstring, ns:bitstring, ciphertext:bitstring) = (empty, empty, empty) in
-	let e = generate_keypair(key_e(me, them, sid)) in
-	let ne = key2bit(getpublickey(e)) in
-	let ss = mixHash(ss, ne) in
-	let ss = mixKey(ss, getpublickey(e)) in
 	let (ss:symmetricstate, ciphertext:bitstring) = encryptAndHash(ss, payload) in
 	let hs = handshakestatepack(ss, s, e, rs, re, psk, initiator) in
 	let message_buffer = concat3(ne, ns, ciphertext) in
 	(hs, message_buffer).
 </p>
-<h4>How each token is processed by the initiator:</h4>
-<ul>
-<li><span class="mono">e</span>: Signals that the initiator is sending a fresh ephemeral key share as part of this message. This token adds the following state transformations to <span class="mono">writeMessage_a</span>:</li>
-<li><ul>
-<li><span class="mono">mixHash</span>, which hashes the new key into the session hash.</li>
-</ul></li></ul>
+Since Message <span class="mono">C</span> contains no tokens, it is considered purely an "AppData" type message meant to transfer encrypted payloads.
 <p>If a static public key was communicated as part of this message, it would have been encrypted as <span class="mono">ciphertext1</span>. However, since the initiator does not communicate a static public key here, that value is left empty.</p>
-<p>Message <span class="code">A</span>'s payload, which is modeled as the output of the function <span class="mono">msg_a(initiatorIdentity, responderIdentity, sessionId)</span>, is encrypted as <span class="mono">ciphertext2</span>. This invokes the following operations:</p><ul>
+<p>Message <span class="code">C</span>'s payload, which is modeled as the output of the function <span class="mono">msg_a(initiatorIdentity, responderIdentity, sessionId)</span>, is encrypted as <span class="mono">ciphertext2</span>. This invokes the following operations:</p><ul>
 <li><span class="mono">encryptAndHash</span>, which performs an authenticated encryption with added data (AEAD) on the payload, with the session hash as the added data (<span class="mono">encryptWithAd</span>) and <span class="mono">mixHash</span>, which hashes the encrypted payload into the next session hash.</li>
 </ul>
-<h3>Receiving Message <span class="mono">A</span></h3>
-<p>In the applied pi calculus, the initiator's process prepares Message <span class="mono">A</span> using the following function:</p>
+<h3>Receiving Message <span class="mono">C</span></h3>
+<p>In the applied pi calculus, the initiator's process prepares Message <span class="mono">C</span> using the following function:</p>
 <p class="proverif">
-letfun readMessage_a(me:principal, them:principal, hs:handshakestate, message:bitstring, sid:sessionid) =
+letfun readMessage_c(me:principal, them:principal, hs:handshakestate, message:bitstring, sid:sessionid) =
 	let (ss:symmetricstate, s:keypair, e:keypair, rs:key, re:key, psk:key, initiator:bool) = handshakestateunpack(hs) in
 	let (ne:bitstring, ns:bitstring, ciphertext:bitstring) = deconcat3(message) in
 	let valid1 = true in
-	let re = bit2key(ne) in
-	let ss = mixHash(ss, key2bit(re)) in
-	let ss = mixKey(ss, re) in
 	let (ss:symmetricstate, plaintext:bitstring, valid2:bool) = decryptAndHash(ss, ciphertext) in
 	if ((valid1 && valid2)) then (
 		let hs = handshakestatepack(ss, s, e, rs, re, psk, initiator) in
 		(hs, plaintext, true)
 	).
 </p>
-<h4>How each token is processed by the responder:</h4>
-<ul>
-<li><span class="mono">e</span>: Signals that the responder is receiving a fresh ephemeral key share as part of this message. This token adds the following state transformations to <span class="mono">readMessage_a</span>:</li>
-<li><ul>
-<li><span class="mono">mixHash</span>, which hashes the new key into the session hash.</li>
-</ul></li></ul>
+Since Message <span class="mono">C</span> contains no tokens, it is considered purely an "AppData" type message meant to transfer encrypted payloads.
 <p>If a static public key was communicated as part of this message, it would have been encrypted as <span class="mono">ciphertext1</span>. However, since the initiator does not communicate a static public key here, that value is left empty.</p>
-<p>Message <span class="code">A</span>'s payload, which is modeled as the output of the function <span class="mono">msg_a(initiatorIdentity, responderIdentity, sessionId)</span>, is encrypted as <span class="mono">ciphertext2</span>. This invokes the following operations:</p><ul>
+<p>Message <span class="code">C</span>'s payload, which is modeled as the output of the function <span class="mono">msg_a(initiatorIdentity, responderIdentity, sessionId)</span>, is encrypted as <span class="mono">ciphertext2</span>. This invokes the following operations:</p><ul>
 <li><span class="mono">decryptAndHash</span>, which performs an authenticated decryption with added data (AEAD) on the payload, with the session hash as the added data (<span class="mono">decryptWithAd</span>) and <span class="mono">mixHash</span>, which hashes the encrypted payload into the next session hash.</li>
 </ul>
 <h3>Queries and Results</h3>
-Message <span class="mono">A</span> is tested against four authentication queries and five confidentiality queries.
-<h4>Authentication Grade 1: <span class="failed">Failed</span></h4>
-<p class="proverif"><br />RESULT event(RecvMsg(bob,alice,stagepack_a(sid_b),m)) ==> event(SendMsg(alice,c_1200,stagepack_a(sid_a),m)) || (event(LeakS(phase0,alice)) && event(LeakPsk(phase0,alice,bob))) || event(LeakPsk(phase0,alice,bob)) cannot be proved.</p>
+Message <span class="mono">C</span> is tested against four authentication queries and five confidentiality queries.
+<h4>Authentication Grade 1: <span class="passed">Passed</span></h4>
+<p class="proverif"><br />RESULT event(RecvMsg(bob,alice,stagepack_c(sid_b),m)) ==> event(SendMsg(alice,c_1342,stagepack_c(sid_a),m)) || (event(LeakS(phase0,alice)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(phase0,bob)) && event(LeakPsk(phase0,alice,bob))) is true.</p>
 <p>In this query, we test for <em>sender authentication</em> and <em>message integrity</em>. If Bob receives a valid message from Alice, then Alice must have sent that message to <em>someone</em>, or Alice had their static key and PSK compromised before the session began, or Bob had their static key and PSK compromised before the session began.</p>
-<h4>Authentication Grade 2: <span class="failed">Failed</span></h4>
-<p class="proverif"><br />RESULT event(RecvMsg(bob,alice,stagepack_a(sid_b),m)) ==> event(SendMsg(alice,c_1200,stagepack_a(sid_a),m)) || event(LeakS(phase0,alice)) cannot be proved.</p>
+<h4>Authentication Grade 2: <span class="passed">Passed</span></h4>
+<p class="proverif"><br />RESULT event(RecvMsg(bob,alice,stagepack_c(sid_b),m)) ==> event(SendMsg(alice,c_1342,stagepack_c(sid_a),m)) || event(LeakS(phase0,alice)) is true.</p>
 <p>In this query, we test for <em>sender authentication</em> and is <em>Key Compromise Impersonation</em> resistance. If Bob receives a valid message from Alice, then Alice must have sent that message to <em>someone</em>, or Alice had their static key compromised before the session began.</p>
-<h4>Authentication Grade 3: <span class="failed">Failed</span></h4>
-<p class="proverif"><br />RESULT event(RecvMsg(bob,alice,stagepack_a(sid_b),m)) ==> event(SendMsg(alice,bob,stagepack_a(sid_a),m)) || (event(LeakS(phase0,alice)) && event(LeakPsk(phase0,alice,bob))) || event(LeakPsk(phase0,alice,bob)) cannot be proved.</p>
+<h4>Authentication Grade 3: <span class="passed">Passed</span></h4>
+<p class="proverif"><br />RESULT event(RecvMsg(bob,alice,stagepack_c(sid_b),m)) ==> event(SendMsg(alice,bob,stagepack_c(sid_a),m)) || (event(LeakS(phase0,alice)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(phase0,bob)) && event(LeakPsk(phase0,alice,bob))) is true.</p>
 <p>In this query, we test for <em>sender and receiver authentication</em> and <em>message integrity</em>. If Bob receives a valid message from Alice, then Alice must have sent that message to <em>Bob specifically</em>, or Alice had their static key and PSK compromised before the session began, or Bob had their static key and PSK compromised before the session began.</p>
-<h4>Authentication Grade 4: <span class="failed">Failed</span></h4>
-<p class="proverif"><br />RESULT event(RecvMsg(bob,alice,stagepack_a(sid_b),m)) ==> event(SendMsg(alice,bob,stagepack_a(sid_a),m)) || event(LeakS(phase0,alice)) cannot be proved.</p>
+<h4>Authentication Grade 4: <span class="passed">Passed</span></h4>
+<p class="proverif"><br />RESULT event(RecvMsg(bob,alice,stagepack_c(sid_b),m)) ==> event(SendMsg(alice,bob,stagepack_c(sid_a),m)) || event(LeakS(phase0,alice)) is true.</p>
 <p>In this query, we test for <em>sender and receiver authentication</em> and is <em>Key Compromise Impersonation</em> resistance. If Bob receives a valid message from Alice, then Alice must have sent that message to <em>Bob specifically</em>, or Alice had their static key compromised before the session began.</p>
-<h4>Confidentiality Grade 1: <span class="failed">Failed</span></h4>
-<p class="proverif"><br />RESULT attacker_p1(msg_a(alice,bob,sid_a)) ==> event(LeakPsk(phase0,alice,bob)) || event(LeakPsk(phase1,alice,bob)) cannot be proved.</p>
+<h4>Confidentiality Grade 1: <span class="passed">Passed</span></h4>
+<p class="proverif"><br />RESULT attacker_p1(msg_c(alice,bob,sid_a)) ==> (event(LeakS(phase0,bob)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(phase0,bob)) && event(LeakPsk(phase1,alice,bob))) || (event(LeakS(phase1,bob)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(phase1,bob)) && event(LeakPsk(phase1,alice,bob))) is true.</p>
 <p>In this query, we test for <em>message secrecy</em> by checking if a passive attacker is able to retrieve the payload plaintext only by compromising Bob's static key and PSK either before or after the protocol session.</p>
-<h4>Confidentiality Grade 2: <span class="failed">Failed</span></h4>
-<p class="proverif"><br />RESULT attacker_p1(msg_a(alice,bob,sid_a)) ==> event(LeakPsk(phase0,alice,bob)) || event(LeakPsk(phase1,alice,bob)) cannot be proved.</p>
+<h4>Confidentiality Grade 2: <span class="passed">Passed</span></h4>
+<p class="proverif"><br />RESULT attacker_p1(msg_c(alice,bob,sid_a)) ==> (event(LeakS(phase0,bob)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(phase0,bob)) && event(LeakPsk(phase1,alice,bob))) || (event(LeakS(phase1,bob)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(phase1,bob)) && event(LeakPsk(phase1,alice,bob))) is true.</p>
 <p>In this query, we test for <em>message secrecy</em> by checking if an active attacker is able to retrieve the payload plaintext only by compromising Bob's static key and PSK either before or after the protocol session.</p>
-<h4>Confidentiality Grade 3: <span class="failed">Failed</span></h4>
-<p class="proverif"><br />RESULT attacker_p1(msg_a(alice,bob,sid_a)) ==> event(LeakPsk(phase0,alice,bob)) || (event(LeakPsk(py,alice,bob)) && event(LeakS(pz,alice))) cannot be proved.</p>
+<h4>Confidentiality Grade 3: <span class="passed">Passed</span></h4>
+<p class="proverif"><br />RESULT attacker_p1(msg_c(alice,bob,sid_a)) ==> (event(LeakS(phase0,bob)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(px,bob)) && event(LeakPsk(py,alice,bob)) && event(LeakS(pz,alice))) is true.</p>
 <p>In this query, we test for <em>forward secrecy</em> by checking if a passive attacker is able to retrieve the payload plaintext only by compromising Bob's static key and PSK before the protocol session, or after the protocol session along with Alice's static public key (at any time.)</p>
-<h4>Confidentiality Grade 4: <span class="failed">Failed</span></h4>
-<p class="proverif"><br />RESULT attacker_p1(msg_a(alice,bob,sid_a)) ==> event(LeakPsk(phase0,alice,bob)) || (event(LeakPsk(py,alice,bob)) && event(LeakS(pz,alice))) cannot be proved.</p>
+<h4>Confidentiality Grade 4: <span class="passed">Passed</span></h4>
+<p class="proverif"><br />RESULT attacker_p1(msg_c(alice,bob,sid_a)) ==> (event(LeakS(phase0,bob)) && event(LeakPsk(phase0,alice,bob))) || (event(LeakS(px,bob)) && event(LeakPsk(py,alice,bob)) && event(LeakS(pz,alice))) is true.</p>
 <p>In this query, we test for <em>weak forward secrecy</em> by checking if an active attacker is able to retrieve the payload plaintext only by compromising Bob's static key and PSK before the protocol session, or after the protocol session along with Alice's static public key (at any time.)</p>
-<h4>Confidentiality Grade 5: <span class="failed">Failed</span></h4>
-<p class="proverif"><br />RESULT attacker_p1(msg_a(alice,bob,sid_a)) ==> event(LeakPsk(phase0,alice,bob)) cannot be proved.</p>
+<h4>Confidentiality Grade 5: <span class="passed">Passed</span></h4>
+<p class="proverif"><br />RESULT attacker_p1(msg_c(alice,bob,sid_a)) ==> (event(LeakS(phase0,bob)) && event(LeakPsk(phase0,alice,bob))) is true.</p>
 <p>In this query, we test for <em>strong forward secrecy</em> by checking if an active attacker is able to retrieve the payload plaintext only by compromising Bob's static key and PSK before the protocol session.</p>
 		</div>
 	</div>
