Remove testgen parameter from documentation.

--- a/src/html/cmd/index.html
+++ b/src/html/cmd/index.html
@@ -37,10 +37,9 @@
 			Noise Explorer has three individual modes: generation, rendering and web interface.
 
 			Generation:
-			--generate=(json|proverif|go): Specify output format.
+			--generate=(json|pv|go|rs): Specify output format.
 			--pattern=[file]: Specify input pattern file (required).
 			--attacker=(active|passive): Specify ProVerif attacker type (default: active).
-			--testgen: Embed test vectors into the generated implementation.
 
 			Rendering:
 			--render=(handshake|message): Render results from ProVerif output files into HTML.
